@@ -567,3 +567,5 @@ ADDED: You can now use quicksave and quickload while recording a replay.
 
 FIXED: The prince can now grab a ledge at the bottom right corner of a room with no room below.
 	Details: https://forum.princed.org/viewtopic.php?p=30410#p30410
+ADDED: Draw your sword anywhere with Ctrl, like in PoP2. (experimental)
+	TODO: Make this configurable.
